services section add

--- a/index.html
+++ b/index.html
@@ -94,6 +94,111 @@
           </div>
         </div>
       </section>
+
+      <section class="services">
+        <div class="container">
+          <div class="services__content">
+            <h3 class="services__title">Our services</h3>
+            <hr class="services__line" />
+            <p class="services__text">
+              We provide to you the best choiches for you. Adjust it to your
+              health needs and make sure your undergo treatment with our highly
+              qualified doctors you can consult with us which type of service is
+              suitable for your health
+            </p>
+          </div>
+
+          <ul class="services__list">
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Search doktor</h4>
+                <p class="services__item--text">
+                  Choose your doctor from thousands of specialist, general, and
+                  trusted hospitals
+                </p>
+              </a>
+            </li>
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Online pharmacy</h4>
+                <p class="services__item--text">
+                  Buy your medicines with our mobile application with a simple
+                  delivery system
+                </p>
+              </a>
+            </li>
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Consultation</h4>
+                <p class="services__item--text">
+                  Free consultation with our trusted doctors and get the best
+                  recomendations
+                </p>
+              </a>
+            </li>
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Details info</h4>
+                <p class="services__item--text">
+                  Free consultation with our trusted doctors and get the best
+                  recomendations
+                </p>
+              </a>
+            </li>
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Emergency care</h4>
+                <p class="services__item--text">
+                  You can get 24/7 urgent care for yourself or your children and
+                  your
+                </p>
+              </a>
+            </li>
+            <li class="services__item">
+              <a class="services__item--link" href="#">
+                <img
+                  class="service__item--img"
+                  src="./img/lupa.png"
+                  alt="lupa"
+                />
+                <h4 class="services__item--title">Tracking</h4>
+                <p class="services__item--text">
+                  Track and save your medical history and health data
+                </p>
+              </a>
+            </li>
+          </ul>
+
+          <div class="services__link--div">
+            <a class="services__link" href="#">Learn more</a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container"></div>
