--- a/index.html
+++ b/index.html
@@ -10,194 +10,10 @@
   <body>
     <h1 class="visually-hidden">Trafalgar</h1>
 
-    <header class="header">
-      <div class="container">
-        <div class="header__container">
-          <a href="#">
-            <img src="./img/logo.svg" alt="logo" class="header__logo" />
-          </a>
-
-          <ul class="header__list">
-            <li>
-              <a class="header__link home" href="#">Home</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Find a doctor</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Apps</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Testimonials</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">About us</a>
-            </li>
-          </ul>
-
-          <ul class="header__menu d-none">
-            <li>
-              <a class="header__link home" href="#">Home</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Find a doctor</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Apps</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">Testimonials</a>
-            </li>
-            <li>
-              <a class="header__link" href="#">About us</a>
-            </li>
-          </ul>
-
-          <script src="https://cdn.lordicon.com/lordicon.js"></script>
-          <lord-icon
-            class="header__open-icon"
-            src="https://cdn.lordicon.com/pcllgpqm.json"
-            trigger="hover"
-            style="width: 50px; height: 50px"
-          >
-          </lord-icon>
-
-          <script src="https://cdn.lordicon.com/lordicon.js"></script>
-          <lord-icon
-            class="header__close-icon d-none"
-            src="https://cdn.lordicon.com/ofcynlwa.json"
-            trigger="hover"
-            style="width: 50px; height: 50px"
-          >
-          </lord-icon>
-        </div>
-      </div>
-    </header>
+    <header class="header"></header>
     <main>
-      <section class="virtual">
-        <div class="container">
-          <div class="virtual__container">
-            <div class="virtual__content">
-              <h2 class="virtual__title">Virtual healthcare for you</h2>
-              <p class="virtual__text">
-                Trafalgar provides progressive, and affordable healthcare,
-                accessible on mobile and online for everyone
-              </p>
-              <a class="virtual__link" href="#">Consult Today</a>
-            </div>
-
-            <img
-              class="virtual__img"
-              src="./img/illustration.png"
-              alt="virtual image"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section class="services">
-        <div class="container">
-          <div class="services__content">
-            <h3 class="services__title">Our services</h3>
-            <hr class="services__line" />
-            <p class="services__text">
-              We provide to you the best choiches for you. Adjust it to your
-              health needs and make sure your undergo treatment with our highly
-              qualified doctors you can consult with us which type of service is
-              suitable for your health
-            </p>
-          </div>
-
-          <ul class="services__list">
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Search doktor</h4>
-                <p class="services__item--text">
-                  Choose your doctor from thousands of specialist, general, and
-                  trusted hospitals
-                </p>
-              </a>
-            </li>
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Online pharmacy</h4>
-                <p class="services__item--text">
-                  Buy your medicines with our mobile application with a simple
-                  delivery system
-                </p>
-              </a>
-            </li>
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Consultation</h4>
-                <p class="services__item--text">
-                  Free consultation with our trusted doctors and get the best
-                  recomendations
-                </p>
-              </a>
-            </li>
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Details info</h4>
-                <p class="services__item--text">
-                  Free consultation with our trusted doctors and get the best
-                  recomendations
-                </p>
-              </a>
-            </li>
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Emergency care</h4>
-                <p class="services__item--text">
-                  You can get 24/7 urgent care for yourself or your children and
-                  your
-                </p>
-              </a>
-            </li>
-            <li class="services__item">
-              <a class="services__item--link" href="#">
-                <img
-                  class="service__item--img"
-                  src="./img/lupa.png"
-                  alt="lupa"
-                />
-                <h4 class="services__item--title">Tracking</h4>
-                <p class="services__item--text">
-                  Track and save your medical history and health data
-                </p>
-              </a>
-            </li>
-          </ul>
-
-          <div class="services__link--div">
-            <a class="services__link" href="#">Learn more</a>
-          </div>
-        </div>
+      <section>
+        <div class="container"></div>
       </section>
     </main>
     <footer class="footer">
