men header ga yozvoma

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <h1 class="visually-hidden">Trafalgar</h1>
 
-    <header class="header"></header>
+    <header class="header">
+      <h1>header</h1>
+    </header>
     <main>
       <section>
         <div class="container"></div>
