--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container"></div>
+      <div class="container">
+        <h1>
+          footer Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloribus.
+        </h1>
+      </div>
     </footer>
 
     <script src="js/main.js"></script>
