header section end

--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
     <h1 class="visually-hidden">Trafalgar</h1>
 
     <header class="header">
-      <h1>header</h1>
+      <div class="container header__container">
+        <a href="index.html">
+          <img src="https://picsum.photos/id/15/160/40" alt="header logo" />
+        </a>
+
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="#" class="header__link home">Home</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Find a doctor</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Apps</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">Testimonials</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">About us</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <section>
@@ -20,9 +42,6 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <h1>
-          footer Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloribus.
-        </h1>
       </div>
     </footer>
 
