--- a/index.html
+++ b/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
-    <title>Trafalgar</title>
-    <link rel="stylesheet" href="css/main.min.css" />
-  </head>
-  <body>
-    <h1 class="visually-hidden">Trafalgar</h1>
 
-    <header class="header">
-      <h1>header</h1>
-    </header>
-    <main>
-      <section>
-        <div class="container"></div>
-      </section>
-    </main>
-    <footer class="footer">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
+  <title>Trafalgar</title>
+  <link rel="stylesheet" href="css/main.min.css" />
+</head>
+
+<body>
+  <h1 class="visually-hidden">Trafalgar</h1>
+
+  <header class="header">
+
+  </header>
+  <main>
+    <section>
       <div class="container">
-        <h1>
-          footer Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloribus.
-        </h1>
-      </div>
-    </footer>
 
-    <script src="js/main.js"></script>
-  </body>
+      </div>
+    </section>
+
+    <section class="lead">
+      <div class="container">
+
+        <div class="lead__container">
+          <img src="img/hon.png" alt="h" width="550px" height="377px">
+
+          <div class="lead__content">
+            <h1 class="lead__title">
+              Leading healthcare providers
+            </h1>
+
+            <hr class="lead__line">
+
+            <p class="lead__text">
+              Trafalgar provides progressive, and affordable
+              healthcare, accessible on mobile and
+              online for everyone.
+              To us, it’s not just work. We take pride
+              in the solutions we deliver
+            </p>
+
+            <button class="lead__btn">
+              Learn more
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
+
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
